# blst-ts

./: .benchrc.yaml  .dockerignore  .eslintrc.js  .gitignore  .gitmodules  .mocharc.cjs  .mocharc.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.armEnv  LICENSE  README.md  binding.gyp  bindings.ts  blst.hpp  blst_wrap.cpp  blst_wrap.js  blst_wrap.py  build.node.sh  eth2.ts  index.d.ts  index.js  karma.conf.js  package.json  package.rebuild.json  run.me  runnable.threads.js  test-with-retry.sh  tsconfig.build.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.fuzz.json  tsconfig.json  tsconfig.mjs.json  tsconfig.scripts.json  webpack.config.js
benchmark/: batchVerify.ts  blstOps.ts  index.ts  multithread.ts  multithreadOverhead.ts  runner.ts  workerMessagePassing.js
doc/: blst.md  building.md  class-hierarchy.md  classes.md  debugging.md  definitions.md  environment.md  errors.md  intro.md  js-perspective-on-c.md  maybe.md  memory-model.md  memory.md  multi-threading.md  napi.md  native-node.md  readme.md  reference.md  repo.md  research.md  structuring-addons.md  values.md  values_and_references.md
lib/: bindings.ts  index.cjs  index.cjs.ts  index.d.ts  index.js  index.mjs  index.mjs.ts  index.mts  index.ts  install.ts  types.d.ts  types.ts  utils.ts
next/: Cargo.toml  chainsafe-blst-v0.0.0.tgz  index.d.ts  index.js
next/src/: lib.rs
prebuild/: blst_wrap.cpp
rebuild/: .clang-format  .eslintrc.cjs  .gitignore  .jazzerjsrc.json  binding.gyp  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.fuzz.json  tsconfig.json  tsconfig.types.json
(+264 files in other folders)
